More Bug Squashing
Improved dataset caching performance and accuracy; also fixed the whitespace bug caused by the space character in Cape May.

--- a/html/static/css/site.css
+++ b/html/static/css/site.css
@@ -15,6 +15,21 @@ body::after  {
     opacity: 0.2;
     filter: grayscale(100%);
 }
+
+#overlay {
+    background: #ffffff;
+    color: #666666;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    z-index: 5000;
+    top: 0;
+    left: 0;
+    float: left;
+    text-align: center;
+    padding-top: 25%;
+    opacity: .80;
+}
   
   .table {
     background-color:grey;
